package com.pluralsight.dao.contracts;

import com.pluralsight.model.contract.SalesContract;

import java.util.List;

public interface SalesContractDao {
    void saveSalesContract(SalesContract salesContract);

    List<SalesContract> findAllSalesContracts();
}
